--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React Hooks & Redux example</title>
+  <title>React Hooks & Redux & OMDB API</title>
   <!-- Compiled and minified CSS -->
 </head>
 
